# games101-rs

./: .gitignore  Cargo.toml  README.md
0_Transformation/: main.rs
1_Triangle/: main.rs  rasterizer.rs  triangle.rs
Assignment1-rust/: Cargo.toml
Assignment1-rust/src/: main.rs
Assignment1/Games1/: main.cpp
Assignment2-rust/: Cargo.toml
Assignment2-rust/.cargo/: cbindgen.toml
Assignment2-rust/src/: main.rs  rasterizer.rs
Assignment2-rust/src/utils/: mod.rs
Assignment2/Games2/: main.cpp  rasterizer.cpp
Assignment3/: rasterizer.cpp
Assignment3-cpp/: Texture.cpp  main.cpp
Assignment3-rust/: Cargo.toml  build.rs
Assignment3-rust/src/: main.rs  rasterizer.rs
Assignment3-rust/src/utils/: image.rs
Assignment4-cpp/: main.cpp
Assignment5/: Renderer.cpp  Triangle.hpp
Assignment6/: Renderer.cpp
Assignment6-cpp/: BVH.cpp  Bounds3.hpp  Triangle.hpp  Vector.hpp
Assignment7/: Scene.cpp  Scene.hpp  Vector.hpp
Assignment7-cpp/: BVH.cpp  Bounds3.hpp  Triangle.hpp
hw0/: Cargo.toml
hw1/: Cargo.toml  build.rs  shaders.metal
hw1/.cargo/: config.toml
hw1/src/: main.rs  rasterizer.rs  shader_types.rs  transform.rs  triangle.rs  window.rs
hw1/src/utils/: image.rs  render.rs  shader_types.rs
hw2/: shaders.metal
hw2/src/: main.rs  rasterizer.rs  triangle.rs
hw2/src/utils/: image.rs
hw3/: Cargo.toml  shaders.metal
hw3/src/: loader.rs  main.rs  rasterizer.rs  shader.rs  texture.rs  triangle.rs
hw3/src/utils/: shader_types.rs
