[package]
name = "games101-rs"
version = "0.1.0"
edition = "2021"
exclude = ["*/assignment"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.24.0"
metal = "0.24.0"
png = "0.17.8"

[[bin]]
name = "hw0"
path = "./0_Transformation/main.rs"

[[bin]]
name = "hw1"
path = "./1_Triangle/main.rs"
