[package]
name = "hw1"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dev-dependencies]
bindgen = "0.65"


[dependencies]
core-graphics-types = "0.1"
cocoa = "0.24"
core-graphics = "0.22"
png = "0.17"
metal = "0.24"
winit = "0.28"
glam = "0.24"
half = "2.2.1"

[dependencies.objc]
version = "0.2"
features = ["objc_exception"]


